--- a/new-year-new-me/style.css
+++ b/new-year-new-me/style.css
@@ -13,14 +13,16 @@
     /* align-items: center; */
     justify-content: center;
 }
-.div{
+.banner-details{
     text-align: right;
     padding-right: 50px;
    margin: 0 200px;
     
-    
+    width: 400px;
+    margin-left: auto;
 
 }
+
 .header-title{
         font-size: 50px;
         
@@ -46,9 +48,13 @@
     
     
 }
+.second-banner-title{
+    width: 500px;
+    margin-left: auto;
+}
 .second-banner-paragrap{
-    /* text-align: right; */
-
+            margin-top: 20px;
+            color: darkgray;
 }
 
 /* main section */
@@ -66,6 +72,7 @@ main{
 .my-plans-title{
     text-align: center;
     margin-bottom: 30px;
+    font-size: 30px;
 }
 .my-plans-info{
     display: flex;
@@ -91,10 +98,13 @@ main{
         top: 30px;
         left: 20px;
         font-size: 30px;
+        width: 450px;
+    margin-right: auto;
+    text-align: left;
 }
 .call-now-button{
     position: absolute;
-        top: 100px;
+        top: 120px;
         left: 50px;
 
         background-color:white;
@@ -116,7 +126,8 @@ call-now-button-style{
     background-color: black;
     padding: 50px 100px;
     margin-top: 60px;
-    /* gap: 100px; */
+    margin-right: auto;
+    text-align: left;
     
 }
 .my-plans-info-bottom{
@@ -138,6 +149,7 @@ call-now-button-style{
 
 .cottom-text-color{
     color: #ffffff;
+    text-align: left;
 }
 .future{
     font-size: 40px;
